--- a/index.html
+++ b/index.html
@@ -32,20 +32,17 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
     <title>esci-web Main Menu</title>
 
     <!-- stylesheets -->
-    <link rel="stylesheet" type="text/css" href="./css/tooltipster.bundle.min.css" />
+    <link rel="stylesheet" type="text/css" href="./css/tipped.css"/>
 
     <link href=./css/esci.css rel=stylesheet>
     <link href=./css/esci-web.css rel=stylesheet>
 
     <!-- scripts -->
-    <script src=https://code.jquery.com/jquery-3.5.0.js
-            integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" 
-            crossorigin="anonymous">
-    </script>
+    <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="./js/tooltipster.bundle.min.js"></script>
+    <script type="text/javascript" src="./js/tipped.min.js"></script>
 
-    <script src=./js/esci-web.js defer></script>
+    <script src=./js/esci-web.js ></script>
 
   </head>
 
@@ -56,17 +53,17 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
         <!----------------------------------Main heading---------------------------------->
         <div id=header>
           <div id=logo><img id=logoimg src=./images/logo.png></div>
-          <div id=mainheading>esci web</div>
-          <div id=subheading>Main Menu</div>
+          <div id=mainheading data-tooltip>esci web</div>
+          <div id=subheading data-tooltip>Main Menu</div>
           <div id=tooltipsonoff>?</div>
         </div>
 
 
         <!---------------------------------Main menu items---------------------------->
         <div id=mainmenu>
-          <div class=menuitems id=menu1>esci dances (of means)</div>
-          <div class=menuitems id=menu2>esci normal</div>
-          <div class=menuitems id=menu3>?</div>
+          <div class=menuitems id=menu1 data-tooltip>esci dances (of means)</div>
+          <div class=menuitems id=menu2 data-tooltip>esci normal</div>
+          <div class=menuitems id=menu3 data-tooltip>?</div>
         </div>
 
         <!---------------------------------Footer---------------------------------------------->
