Getting set up still

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 Program       index.html 
 Author        Gordon Moore
 Date          14 July 2020
-Description   A JavaScript implementation of ESCI Menu for Introduction to the New Statistics by Geoff Cumming and Robert Calin-Jageman
+Description   A JavaScript implementation of esci Menu for Introduction to the New Statistics by Geoff Cumming and Robert Calin-Jageman
 Licence       GNU General Public LIcence Version 3, 29 June 2007
 -->
 <!-- #region version history-->
