The first version of the menu. 0.0.1

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 
         <!---------------------------------Main menu items---------------------------->
         <div id=mainmenu>
-          <div class=menuitems id=menu1 data-tooltip>esci dances (of means)</div>
-          <div class=menuitems id=menu2 data-tooltip>esci normal</div>
-          <div class=menuitems id=menu3 data-tooltip>?</div>
+          <div class=menuitems id=menu1 data-tooltip>dances (of means)</div>
+          <div class=menuitems id=menu2 data-tooltip>distributions</div>
+          <div class=menuitems id=menu3 data-tooltip>...</div>
         </div>
 
         <!---------------------------------Footer---------------------------------------------->
