--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
     <link href=./css/esci-web.css rel=stylesheet>
 
     <!-- scripts -->
-    <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
     <script type="text/javascript" src="./js/tipped.min.js"></script>
 
     <script src=./js/esci-web.js ></script>
