--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 -->
 <!-- #region version history-->
 <!--
-0.0.1       Initial version
-
+0.0.1         Initial version
+0.1.0          2020-07-25 The first attempt
 
 -->
 <!--endregion -->
@@ -54,7 +54,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
       <div id=leftpanel>
         <!----------------------------------Main heading---------------------------------->
         <div id=header>
-          <div id=logo><img id=logoimg src=./images/logo.png></div>
+          <div id=logo><img id=logoimg src=./images/logo.gif></div>
           <div id=mainheading data-tooltip>esci web</div>
           <div id=subheading data-tooltip>Main Menu</div>
           <div id=tooltipsonoff>?</div>
@@ -63,9 +63,9 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 
         <!---------------------------------Main menu items---------------------------->
         <div id=mainmenu>
-          <div class=menuitems id=menu1 data-tooltip>dances (of means)</div>
-          <div class=menuitems id=menu2 data-tooltip>distributions</div>
-          <div class=menuitems id=menu3 data-tooltip>...</div>
+          <div class=menus id=menu1 data-tooltip>dances (of means)</div>
+          <div class=menus id=menu2 data-tooltip>distributions</div>
+          <div class=menus id=menu3 data-tooltip>...</div>
         </div>
 
         <!---------------------------------Footer---------------------------------------------->
@@ -75,7 +75,33 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
       </div>
 
       <div id=rightpanel>
+        <div id=bookimage>
+          <div>
+            <img id=bkimage src=./images/ITNS-the-cover-2-Feb-16-large.png alt='image of the front cover of The New Statistics book'>
+          </div>
+          <div>
+            <img id=esciimg src=./images/escilogotransparent.png>
+            <div>
+              <div id=esciheader>Exploratory Software for Confidence Intervals</div>
+              <div id=esciblurb>A set of interactive pages that allows you to explore statistical concepts ...</div>
+            </div>
+          </div>
+        </div>
+        <div id=blurb>
+        
+        <div id=menuitem1 class=menuitems>
+          The dances of the means
+          <div><img id=dances src=./images/dances.png alt='image of dances screen'></div>
+        </div>
+        <div id=menuitem2 class=menuitems>
+          The normal and Student t distributions
+          <div><img id=distributions src=./images/distribution.png alt='image of distributions screen'></div>
+        </div>
+        <div id=menuitem3 class=menuitems>
+          ...
+        </div>
 
+        </div>
       </div>
 
     </div>
