--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 <!-- #region version history-->
 <!--
 0.0.1         Initial version
-0.1.0          2020-07-25 The first attempt
+0.1.0         2020-07-25 The first attempt
+0.1.1         2020-07-31 Replaced links to libraries from cdn to direct
 
 -->
 <!--endregion -->
@@ -38,10 +39,13 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
     <link href=./css/esci-web.css rel=stylesheet>
 
     <!-- scripts -->
-    <script
+    <!-- <script
     src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
+
+    <script src=./js/jquery-3.5.1.min.js></script>
+
     <script type="text/javascript" src="./js/tipped.min.js"></script>
 
     <script src=./js/esci-web.js ></script>
