Footer link text changed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.0.1         Initial version
 0.1.0         2020-07-25 The first attempt
 0.1.1         2020-07-31 Replaced links to libraries from cdn to direct
+0.1.2         2020-07-31 Footer link text changed to be consistent
 
 -->
 <!--endregion -->
@@ -74,7 +75,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 
         <!---------------------------------Footer---------------------------------------------->
         <div id=footer>
-          <div id=footerlink data-tooltip>Please click here to return to the New Statistics website.</div>
+          <div id=footerlink data-tooltip>Click to return to the New Statistics site</div>
         </div>
       </div>
 
