--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.2         2020-07-31 Footer link text changed to be consistent
 0.1.3
 0.1.4   2020-08-07  Just adjusted font size of menu items and allowed some padding on main image at right
+0.1.5   2020-08-07  More slight adjustments to right panel
+
 -->
 <!--endregion -->
 
