--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 -->
 <!-- #region version history-->
 <!--
-0.0.1         Initial version
-0.1.0         2020-07-25 The first attempt
-0.1.1         2020-07-31 Replaced links to libraries from cdn to direct
-0.1.2         2020-07-31 Footer link text changed to be consistent
+0.0.1   Initial version
+0.1.0   2020-07-25 The first attempt
+0.1.1   2020-07-31 Replaced links to libraries from cdn to direct
+0.1.2   2020-07-31 Footer link text changed to be consistent
 0.1.3
 0.1.4   2020-08-07  Just adjusted font size of menu items and allowed some padding on main image at right
 0.1.5   2020-08-07  More slight adjustments to right panel
-
+0.1.6   2020-08015  Add d dances menu item
 -->
 <!--endregion -->
 
@@ -71,9 +71,10 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 
         <!---------------------------------Main menu items---------------------------->
         <div id=mainmenu>
-          <div class=menus id=menu1 data-tooltip>dances (of means)</div>
-          <div class=menus id=menu2 data-tooltip>distributions</div>
-          <div class=menus id=menu3 data-tooltip>...</div>
+          <div class=menus id=menu1 data-tooltip>dances (of means) beta</div>
+          <div class=menus id=menu2 data-tooltip>distributions (in development)</div>
+          <div class=menus id=menu3 data-tooltip>d picture (in development)</div>
+          <div class=menus id=menu4 data-tooltip>...</div>
         </div>
 
         <!---------------------------------Footer---------------------------------------------->
@@ -106,6 +107,9 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
           <div><img id=distributions src=./images/distribution.png alt='image of distributions screen'></div>
         </div>
         <div id=menuitem3 class=menuitems>
+          No image yet
+        </div>
+        <div id=menuitem4 class=menuitems>
           ...
         </div>
 
