--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.3
 0.1.4   2020-08-07  Just adjusted font size of menu items and allowed some padding on main image at right
 0.1.5   2020-08-07  More slight adjustments to right panel
-0.1.6   2020-08015  Add d dances menu item
+0.1.6   2020-08-15  Add d picture menu item
+0.1.7   2020-08-17  Add d picture image
 -->
 <!--endregion -->
 
@@ -107,7 +108,9 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
           <div><img id=distributions src=./images/distribution.png alt='image of distributions screen'></div>
         </div>
         <div id=menuitem3 class=menuitems>
-          No image yet
+          The d picture
+          <div><img id=distributions src=./images/dpicture.png alt='image of distributions screen'></div>
+
         </div>
         <div id=menuitem4 class=menuitems>
           ...
