--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.5   2020-08-07  More slight adjustments to right panel
 0.1.6   2020-08-15  Add d picture menu item
 0.1.7   2020-08-17  Add d picture image
+0.1.8   2020-08-22  Add precision and see-r menu items
 -->
 <!--endregion -->
 
@@ -75,7 +76,9 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
           <div class=menus id=menu1 data-tooltip>dances (of means) beta</div>
           <div class=menus id=menu2 data-tooltip>distributions (in development)</div>
           <div class=menus id=menu3 data-tooltip>d picture (in development)</div>
-          <div class=menus id=menu4 data-tooltip>...</div>
+          <div class=menus id=menu4 data-tooltip>precision (in development)</div>
+          <div class=menus id=menu5 data-tooltip>see r (in development)</div>
+          <div class=menus id=menu6 data-tooltip>...</div>
         </div>
 
         <!---------------------------------Footer---------------------------------------------->
@@ -110,13 +113,18 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
         <div id=menuitem3 class=menuitems>
           The d picture
           <div><img id=distributions src=./images/dpicture.png alt='image of distributions screen'></div>
-
         </div>
         <div id=menuitem4 class=menuitems>
+          Precision
+          ...
+        </div>
+        <div id=menuitem5 class=menuitems>
+          See ...
+        </div>
+        <div id=menuitem6 class=menuitems>
           ...
         </div>
 
-        </div>
       </div>
 
     </div>
