--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 
         <!---------------------------------Main menu items---------------------------->
         <div id=mainmenu>
-          <div class=menus id=menu1 data-tooltip>dances (of means) beta</div>
-          <div class=menus id=menu2 data-tooltip>distributions (in development)</div>
-          <div class=menus id=menu3 data-tooltip>d picture (in development)</div>
-          <div class=menus id=menu4 data-tooltip>precision (in development)</div>
-          <div class=menus id=menu5 data-tooltip>see r (in development)</div>
-          <div class=menus id=menu6 data-tooltip>...</div>
+          <div class=menus id=menu1 data-tooltip>dances beta</div>
+          <div class=menus id=menu2 data-tooltip>distributions beta</div>
+          <div class=menus id=menu3 data-tooltip><em>d</em> picture beta</div>
+          <div class=menus id=menu4 data-tooltip>precision for planning (in development) </div>
+          <div class=menus id=menu5 data-tooltip>see <em>r</em> (in development)</div>
+          <!-- <div class=menus id=menu6 data-tooltip>...</div> -->
         </div>
 
         <!---------------------------------Footer---------------------------------------------->
@@ -103,26 +103,19 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
         <div id=blurb>
         
         <div id=menuitem1 class=menuitems>
-          The dances of the means
           <div><img id=dances src=./images/dances.png alt='image of dances screen'></div>
         </div>
         <div id=menuitem2 class=menuitems>
-          The normal and Student t distributions
           <div><img id=distributions src=./images/distribution.png alt='image of distributions screen'></div>
         </div>
         <div id=menuitem3 class=menuitems>
-          The d picture
           <div><img id=distributions src=./images/dpicture.png alt='image of distributions screen'></div>
         </div>
         <div id=menuitem4 class=menuitems>
-          Precision
-          ...
         </div>
         <div id=menuitem5 class=menuitems>
-          See ...
         </div>
         <div id=menuitem6 class=menuitems>
-          ...
         </div>
 
       </div>
