--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.7   2020-08-17  Add d picture image
 0.1.8   2020-08-22  Add precision and see-r menu items
 0.1.9   2020-08-24  #1 Make changes re specification
+0.1.10  2020-08-25  #1 Added New Edition
 
 -->
 <!--endregion -->
@@ -116,12 +117,15 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
         <div id=rightpanelgrid>
           <div><img id=bkimage src=./images/ITNS-the-cover-2-Feb-16-large-low-res.png alt='image of the front cover of The New Statistics book'></div>
           <div id=itnsblurb>Information about the first edition, and blog, at <a href=https://www.thenewstatistics.com>www.thenewstatistics.com</a></div>
-  
+          
+          <div id=itnsoverlaytext>Second edition due 2021</div>
+          <div></div>
+
           <div><img id=esciimage src=./images/escilogotransparent.png alt='image of esci logo'></div>
           <div id=escitext>exploratory software for confidence intervals</div>          
         </div>
 
-        <div class=esciblurb>esci software is in development. There are two components:</div>
+        <div class=esciblurb>esci software is in development for the second edition. There are two components:</div>
         <div class=esciblurb>esci in R, running in jamovi, for data analysis and great graphs with CIs, by Robert Calin-Jageman</div>        
         <div class=esciblurb>  esci web in javascript, for statistical dances and interactive graphical tools, by Gordon Moore</div>
 
