--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.8   2020-08-22  Add precision and see-r menu items
 0.1.9   2020-08-24  #1 Make changes re specification
 0.1.10  2020-08-25  #1 Added New Edition
-
+0.1.11  2020-08-25  #? Split see r into 2 menu items
 -->
 <!--endregion -->
 
@@ -97,14 +97,15 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
             <div><img id=distributions class=menuimage src= alt='image of distributions screen'></div>
           </div>
 
-          <div class=menus id=menu5 data-tooltip>see <em>r</em> (in development)</div>
+          <div class=menus id=menu5 data-tooltip>correlation (in development)</div>
           <div id=menuitem5 class=menuitems>
             <div><img id=distributions class=menuimage src= alt='image of distributions screen'></div>
           </div>
 
-          <!-- <div class=menus id=menu6 data-tooltip>...</div>
+          <div class=menus id=menu6 data-tooltip>dance <em>r</em> (in development)</div>
           <div id=menuitem6 class=menuitems>
-          </div> -->
+            <div><img id=distributions class=menuimage src= alt='image of distributions screen'></div>
+          </div>
         </div>
 
         <!---------------------------------Footer---------------------------------------------->
