--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.9   2020-08-24  #1 Make changes re specification
 0.1.10  2020-08-25  #1 Added New Edition
 0.1.11  2020-08-25  #? Split see r into 2 menu items
+0.1.12  2020-08-26  #4 Tips added
 -->
 <!--endregion -->
 
@@ -68,8 +69,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
         <!----------------------------------Main heading---------------------------------->
         <div id=header>
           <div id=logo><img id=logoimg src=./images/logo.gif></div>
-          <div id=mainheading data-tooltip>esci web</div>
-          <div id=subheading data-tooltip>Main Menu</div>
+          <div id=mainheading class=headingtip data-tooltip>esci web</div>
+          <div id=subheading class=headingtip data-tooltip>Main Menu</div>
           <div id=tooltipsonoff>?</div>
         </div>
 
