--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.11  2020-08-25  #? Split see r into 2 menu items
 0.1.12  2020-08-26  #4 Tips added
 0.1.13  2020-08-26  #3 Tweaks to words and colour
+0.1.14  2020-08-27  #3 Tweaks to words and colour
+
 -->
 <!--endregion -->
 
@@ -120,8 +122,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
         <div id=rightpanelgrid>
           <div><img id=bkimage src=./images/ITNS-the-cover-2-Feb-16-large-low-res.png alt='image of the front cover of The New Statistics book'></div>
           <div>
-            <div class=itnsblurb>Information about the first edition, and blog, </div>
-            <div class=itnsblurb id=itnsblurbline2>at <a href=https://www.thenewstatistics.com>www.thenewstatistics.com</a></div>
+            <div class='itnsblurb darkgrey'>Information about the first edition, and blog, at</div>
+            <div class=itnsblurb id=itnsblurbline2><a href=https://www.thenewstatistics.com>www.thenewstatistics.com</a></div>
           </div>
           <div id=itnsoverlaytext>Second edition due 2021</div>
           <div></div>
@@ -131,9 +133,9 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
         </div>
 
         <div class='esciblurb darkgrey'><span class=blue>esci</span> software is in development for the second edition. There are two components:</div>
-        <div class='esciblurb darkgrey'><span class=blue><a href='https://www.thenewstatistics.com'>esci</a> in R</span>, running in <span class=blue>jamovi</span>,</div>  
-          <ul class=darkgrey><li>for data analysis and great graphs with CIs, by Robert Calin-Jageman</li></ul>       
-        <div class='esciblurb darkgrey'><span class=blue>esci web in JavaScript</span>, by Gordon Moore,</div> 
+        <div class='esciblurb darkgrey'><span class=blue><a href='https://thenewstatistics.com/itns/esci/jesci/'>esci</a> in R</span>, running in <span class=blue>jamovi</span>, by Robert Calin-Jageman</div>  
+          <ul class=darkgrey><li>for data analysis and great graphs with CIs</li></ul>       
+        <div class='esciblurb darkgrey'><span class=blue>esci web in JavaScript</span>, by Gordon Moore</div> 
           <ul class=darkgrey>
             <li>for statistical dances and interactive graphical tools</li> 
             <li>use buttons at left to go to the pages</li>
