--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.14  2020-08-27  #3 Tweaks to words and colour
 0.1.15
 0.1.16  2020-08-28  #5 Basic In development page added.
+0.1.17  2020-08-28  #5 v2 of Basic In development message added.
 -->
 <!--endregion -->
 
@@ -143,6 +144,13 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
           </ul>
 
     </div>
+
+
+    <div id=message>
+      Hi, thanks for visiting, but this program is currently in development. It won't be long :)
+      <div id=close>Click to close.</div>
+    </div>
+
 
   </body>
 </html>
