--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.16  2020-08-28  #5 Basic In development page added.
 0.1.17  2020-08-28  #5 v2 of Basic In development message added.
 0.1.18
+
+1.0.0   2020-09-03  Version 1.0.0
 -->
 <!--endregion -->
 
@@ -84,17 +86,17 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
         <!---------------------------------Main menu items---------------------------->
         <div id=mainmenu>
 
-          <div class=menus id=menu1 data-tooltip>dances <span class=darkgrey>beta</span></div>
+          <div class=menus id=menu1 data-tooltip>dances <span class=darkgrey></span></div>
           <div id=menuitem1 class=menuitems>
             <div><img id=dances class=menuimage src=./images/dances.png alt='image of dances screen'></div>
           </div>
 
-          <div class=menus id=menu2 data-tooltip>distributions <span class=darkgrey>beta</span></div>
+          <div class=menus id=menu2 data-tooltip>distributions <span class=darkgrey></span></div>
           <div id=menuitem2 class=menuitems>
             <div><img id=distributions class=menuimage src=./images/distribution.png alt='image of distributions screen'></div>
           </div>
 
-          <div class=menus id=menu3 data-tooltip><em>d</em> picture <span class=darkgrey>beta</span></div>
+          <div class=menus id=menu3 data-tooltip><em>d</em> picture <span class=darkgrey></span></div>
           <div id=menuitem3 class=menuitems>
             <div><img id=distributions class=menuimage src=./images/dpicture.png alt='image of distributions screen'></div>
           </div>
