--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.18
 
 1.0.0   2020-09-03  Version 1.0.0
+1.0.1   2020-09-05  Added correlation beta link
 -->
 <!--endregion -->
 
@@ -98,22 +99,22 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 
           <div class=menus id=menu3 data-tooltip><em>d</em> picture <span class=darkgrey></span></div>
           <div id=menuitem3 class=menuitems>
-            <div><img id=distributions class=menuimage src=./images/dpicture.png alt='image of distributions screen'></div>
+            <div><img id=distributions class=menuimage src=./images/dpicture.png alt='image of d pcicture screen'></div>
           </div>
 
           <div class=menus id=menu4 data-tooltip>precision for planning <span class=darkgrey>(in development)</span> </div>
           <div id=menuitem4 class=menuitems>
-            <div><img id=distributions class=menuimage src= alt='image of distributions screen'></div>
+            <div><img id=distributions class=menuimage src= alt='image of precision screen'></div>
           </div>
 
-          <div class=menus id=menu5 data-tooltip>correlation <span class=darkgrey>(in development)</span></div>
+          <div class=menus id=menu5 data-tooltip>correlation <span class=darkgrey>(beta)</span></div>
           <div id=menuitem5 class=menuitems>
-            <div><img id=distributions class=menuimage src= alt='image of distributions screen'></div>
+            <div><img id=distributions class=menuimage src=./images/correlation.png alt='image of correlations screen'></div>
           </div>
 
           <div class=menus id=menu6 data-tooltip>dance <em>r</em> <span class=darkgrey>(in development)</span></div>
           <div id=menuitem6 class=menuitems>
-            <div><img id=distributions class=menuimage src= alt='image of distributions screen'></div>
+            <div><img id=distributions class=menuimage src= alt='image of dance r screen'></div>
           </div>
         </div>
 
