--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 
 1.0.0   2020-09-03  Version 1.0.0
 1.0.1   2020-09-05  Added correlation beta link
+1.0.2   2020-09-06  Make the releases 1.0.0 and not beta
 -->
 <!--endregion -->
 
@@ -107,7 +108,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
             <div><img id=distributions class=menuimage src= alt='image of precision screen'></div>
           </div>
 
-          <div class=menus id=menu5 data-tooltip>correlation <span class=darkgrey>(beta)</span></div>
+          <div class=menus id=menu5 data-tooltip>correlation <span class=darkgrey></span></div>
           <div id=menuitem5 class=menuitems>
             <div><img id=distributions class=menuimage src=./images/correlation.png alt='image of correlations screen'></div>
           </div>
