--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 1.0.0   2020-09-03  Version 1.0.0
 1.0.1   2020-09-05  Added correlation beta link
 1.0.2   2020-09-06  Make the releases 1.0.0 and not beta
+
+1.0.3   17 Oct 2020  Add dance-r menu item
 -->
 <!--endregion -->
 
@@ -113,9 +115,9 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
             <div><img id=distributions class=menuimage src=./images/correlation.png alt='image of correlations screen'></div>
           </div>
 
-          <div class=menus id=menu6 data-tooltip>dance <em>r</em> <span class=darkgrey>(in development)</span></div>
+          <div class=menus id=menu6 data-tooltip>dance <em>r</em> <span class=darkgrey>(beta)</span></div>
           <div id=menuitem6 class=menuitems>
-            <div><img id=distributions class=menuimage src= alt='image of dance r screen'></div>
+            <div><img id=distributions class=menuimage src=./images/dance-r.png alt='image of dance r screen'></div>
           </div>
         </div>
 
