--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 1.0.2   2020-09-06  Make the releases 1.0.0 and not beta
 
 1.0.3   17 Oct 2020  Add dance-r menu item
+1.0.4   18 Oct 2020 Did tweaks to the menu image display to make smoother  
 -->
 <!--endregion -->
 
@@ -95,6 +96,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
             <div><img id=dances class=menuimage src=./images/dances.png alt='image of dances screen'></div>
           </div>
 
+
           <div class=menus id=menu2 data-tooltip>distributions <span class=darkgrey></span></div>
           <div id=menuitem2 class=menuitems>
             <div><img id=distributions class=menuimage src=./images/distribution.png alt='image of distributions screen'></div>
@@ -119,7 +121,13 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
           <div id=menuitem6 class=menuitems>
             <div><img id=distributions class=menuimage src=./images/dance-r.png alt='image of dance r screen'></div>
           </div>
+
+
+          <div class=menus id=menubottom></div>
+
         </div>
+
+
 
         <!---------------------------------Footer---------------------------------------------->
         <div id=footer>
