Added temp image for precision

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 
           <div class=menus id=menu4 data-tooltip>precision for planning <span class=darkgrey>(in development)</span> </div>
           <div id=menuitem4 class=menuitems>
-            <div><img id=distributions class=menuimage src= alt='image of precision screen'></div>
+            <div><img id=distributions class=menuimage src=./images/precision.png alt='image of precision screen'></div>
           </div>
 
           <div class=menus id=menu5 data-tooltip>correlation <span class=darkgrey></span></div>
