--- a/index.html
+++ b/index.html
@@ -104,22 +104,22 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 
           <div class=menus id=menu3 data-tooltip><em>d</em> picture <span class=darkgrey></span></div>
           <div id=menuitem3 class=menuitems>
-            <div><img id=distributions class=menuimage src=./images/dpicture.png alt='image of d pcicture screen'></div>
+            <div><img id=d-picture class=menuimage src=./images/dpicture.png alt='image of d pcicture screen'></div>
           </div>
 
           <div class=menus id=menu4 data-tooltip>precision for planning <span class=darkgrey>(in development)</span> </div>
           <div id=menuitem4 class=menuitems>
-            <div><img id=distributions class=menuimage src=./images/precision.png alt='image of precision screen'></div>
+            <div><img id=precision class=menuimage src=./images/precision.png alt='image of precision screen'></div>
           </div>
 
           <div class=menus id=menu5 data-tooltip>correlation <span class=darkgrey></span></div>
           <div id=menuitem5 class=menuitems>
-            <div><img id=distributions class=menuimage src=./images/correlation.png alt='image of correlations screen'></div>
+            <div><img id=correlation class=menuimage src=./images/correlation.png alt='image of correlations screen'></div>
           </div>
 
           <div class=menus id=menu6 data-tooltip>dance <em>r</em> <span class=darkgrey>(beta)</span></div>
           <div id=menuitem6 class=menuitems>
-            <div><img id=distributions class=menuimage src=./images/dance-r.png alt='image of dance r screen'></div>
+            <div><img id=dance-r class=menuimage src=./images/dance-r.png alt='image of dance r screen'></div>
           </div>
 
 
