--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 
 1.0.3   17 Oct 2020  Add dance-r menu item
 1.0.4   18 Oct 2020 Did tweaks to the menu image display to make smoother  
+1.0.5   18 Oct 2020 Make images clickable
+
 -->
 <!--endregion -->
 
