Remove beta from dance r

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
             <div><img id=correlation class=menuimage src=./images/correlation.png alt='image of correlations screen'></div>
           </div>
 
-          <div class=menus id=menu6 data-tooltip>dance <em>r</em> <span class=darkgrey>(beta)</span></div>
+          <div class=menus id=menu6 data-tooltip>dance <em>r</em> <span class=darkgrey></span></div>
           <div id=menuitem6 class=menuitems>
             <div><img id=dance-r class=menuimage src=./images/dance-r.png alt='image of dance r screen'></div>
           </div>
