--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 1.0.4   18 Oct 2020 Did tweaks to the menu image display to make smoother  
 1.0.5   18 Oct 2020 Make images clickable
 1.0.6   21 Oct 2020 Change menu links for www.thenewstatistics.com
+1.0.7   6 Nov 2020 Consolidation of all programs into one github repository
 -->
 <!--endregion -->
 
@@ -89,6 +90,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
           <div id=tooltipsonoff>?</div>
         </div>
 
+        <!-------------------------------------------Breadcrumbs---------------------------------------------------->
 
         <!---------------------------------Main menu items---------------------------->
         <div id=mainmenu>
