--- a/esci-correlation.html
+++ b/esci-correlation.html
@@ -18,6 +18,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 
 1.0.0  2020-09-06 Version 1.0.0
 
+1.1.0  6 Nov 2020 Rationalised into one repository
+
 -->
 <!--endregion -->
 
