--- a/esci-d-picture.html
+++ b/esci-d-picture.html
@@ -14,6 +14,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.2.6   2020-08-20  #10 Tooltips 
 
 1.0.0  2020-09-03 Version 1.0.0
+
+1.1.0  6 Nov 2020 Rationalised into one repository
 -->
 <!--endregion -->
 
