--- a/esci-distributions.html
+++ b/esci-distributions.html
@@ -25,6 +25,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 1.0.0       2020-09-03 Version 1.0.0
 1.0.1       21 Oct 2020 Nudge bars somehow too low, fixed.
 
+1.1.0  6 Nov 2020 Rationalised into one repository
+
 -->
 <!--endregion -->
 
