--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
   </head>
 
   <body>
+
     <div id=mainpage>
 
       <div id=leftpanel>
@@ -98,39 +99,39 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
         <!---------------------------------Main menu items---------------------------->
         <div id=mainmenu>
 
-          <div class=menus id=menu1 data-tooltip>dances <span class=darkgrey></span></div>
-          <div id=menuitem1 class=menuitems>
-            <div><img id=dances class=menuimage src=./images/dances.png alt='image of dances screen'></div>
+          <div id=menu1 data class='menus menus-tooltip' data-tooltip>dances <span class=darkgrey></span></div>
+          <div id=menuimage1 class=menuimages>
+            <img id=dances class=mimage src=./images/dances.png alt='image of dances screen'>
           </div>
 
 
-          <div class=menus id=menu2 data-tooltip>distributions <span class=darkgrey></span></div>
-          <div id=menuitem2 class=menuitems>
-            <div><img id=distributions class=menuimage src=./images/distribution.png alt='image of distributions screen'></div>
+          <div id=menu2 data class='menus menus-tooltip' data-tooltip>distributions <span class=darkgrey></span></div>
+          <div id=menuimage2 class=menuimages>
+            <img id=distributions class=mimage src=./images/distribution.png alt='image of distributions screen'>
           </div>
 
-          <div class=menus id=menu3 data-tooltip><em>d</em> picture <span class=darkgrey></span></div>
-          <div id=menuitem3 class=menuitems>
-            <div><img id=d-picture class=menuimage src=./images/dpicture.png alt='image of d pcicture screen'></div>
+          <div id=menu3 data class='menus menus-tooltip' data-tooltip><em>d</em> picture <span class=darkgrey></span></div>
+          <div id=menuimage3 class=menuimages>
+            <img id=d-picture class=mimage src=./images/dpicture.png alt='image of d pcicture screen'>
           </div>
 
-          <div class=menus id=menu4 data-tooltip>precision for planning <span class=darkgrey>(in development)</span> </div>
-          <div id=menuitem4 class=menuitems>
-            <div><img id=precision class=menuimage src=./images/precision.png alt='image of precision screen'></div>
+          <div id=menu4 data class='menus menus-tooltip' data-tooltip>precision for planning <span class=darkgrey>(in development)</span> </div>
+          <div id=menuimage4 class=menuimages>
+            <img id=precision class=mimage src=./images/precision.png alt='image of precision screen'>
           </div>
 
-          <div class=menus id=menu5 data-tooltip>correlation <span class=darkgrey></span></div>
-          <div id=menuitem5 class=menuitems>
-            <div><img id=correlation class=menuimage src=./images/correlation.png alt='image of correlations screen'></div>
+          <div id=menu5 data class='menus menus-tooltip' data-tooltip>correlation <span class=darkgrey></span></div>
+          <div id=menuimage5 class=menuimages>
+            <img id=correlation class=mimage src=./images/correlation.png alt='image of correlations screen'>
           </div>
 
-          <div class=menus id=menu6 data-tooltip>dance <em>r</em> <span class=darkgrey></span></div>
-          <div id=menuitem6 class=menuitems>
-            <div><img id=dance-r class=menuimage src=./images/dance-r.png alt='image of dance r screen'></div>
+          <div id=menu6 data class='menus menus-tooltip' data-tooltip>dance <em>r</em> <span class=darkgrey></span></div>
+          <div id=menuimage6 class=menuimages>
+            <img id=dance-r class=mimage src=./images/dance-r.png alt='image of dance r screen'>
           </div>
 
 
-          <div class=menus id=menubottom></div>
+          <div id=menubottom class=menus></div>
 
         </div>
 
