Menu option precision for planning edit

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
             <img id=d-picture class=mimage src=./images/dpicture.png alt='image of d pcicture screen'>
           </div>
 
-          <div id=menu4 data class='menus menus-tooltip' data-tooltip>precision for planning <span class=darkgrey>(in development)</span> </div>
+          <div id=menu4 data class='menus menus-tooltip' data-tooltip>precision for planning <span class=darkgrey></span> </div>
           <div id=menuimage4 class=menuimages>
             <img id=precision class=mimage src=./images/precision.png alt='image of precision screen'>
           </div>
