Temporarily added password to protect Precision whilst in development

--- a/index.html
+++ b/index.html
@@ -170,8 +170,11 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 
 
     <div id=message>
-      Hi, thanks for visiting, but this program is currently in development. It won't be long :)
-      <div id=close>Click to close.</div>
+      <div id=messageclose>
+        Hi, thanks for visiting, but this program is currently in development. It won't be long :)
+        <div id=close>Click to close.</div>
+      </div>
+      <input id=pin type=password>
     </div>
 
 
