In precision for planning, Paired Design tab, all the tips are correct, phew. Just one change: the rho to the left of the slider.

--- a/esci-precision.html
+++ b/esci-precision.html
@@ -27,6 +27,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.22  6  Nov 2020 #12 Change text in panel3/4
 
 1.1.0  6 Nov 2020 Rationalised into one repository
+1.1.3  13 Nov 2020 Remove italic from rho symbol in html
 
 -->
 <!--endregion -->
@@ -199,7 +200,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
                 <div id=populationcorrelationpanel>
                   <div class='font18 correltip' data-tooltip><span class=red>2 </span>Population correlation</div>
                   <div id=correlationrhosliderpanel>
-                    <div id=correlationrhotitle class='font16 correllabeltip' data-tooltip>Correlation <em>&rho;</em></div>
+                    <div id=correlationrhotitle class='font16 correllabeltip' data-tooltip>Correlation &rho;</div>
                     <div id=correlationrhosliderdiv class=correlslidertip data-tooltip><input id=correlationrhoslider type=text/></div>
                     <div class=correlslidertip data-tooltip><img id=correlationrhonudgebackward class="icons slidericons" src=./images/left.png alt='nudge backwards'></div>
                     <div class=correlslidertip data-tooltip><img id=correlationrhonudgeforward class="icons slidericons" src=./images/right.png alt='nudge forward'></div>
